@@ -1,3 +1,9 @@
+globus-gridftp-server (8.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Sat, 08 Aug 2015 07:42:18 -0400
+
 globus-gridftp-server (8.3-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix preload_link checking
